// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changeSelectedQueuesState calls setItem function 1`] = `
Array [
  Array [
    "selectedQueues.tenantId.agentId",
    Object {
      "selectedQueues": Array [
        "123",
        "abc",
      ],
    },
  ],
]
`;

exports[`changeSelectedQueuesState gets selectedQueues 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`changeSelectedQueuesState selects tenant and agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`changeSelectedQueuesState updates selectedQueues in localStorage 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`changeSelectedTransferListsState calls setItem function 1`] = `
Array [
  Array [
    "selectedTransferLists.tenantId.agentId",
    Object {
      "selectedTransferLists": Array [
        "123",
        "abc",
      ],
    },
  ],
]
`;

exports[`changeSelectedTransferListsState gets selectedTransferLists 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`changeSelectedTransferListsState selects tenant and agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`changeSelectedTransferListsState updates selectedTransferLists in localStorage 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`goInitializeTransferMenuPreferences initialize all preferences stored in localStorage puts selected queues into state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "queues": Array [
          "true",
        ],
        "type": "app/AgentTransferMenuPreferenceMenu/TOGGLE_SELECTED_QUEUES_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goInitializeTransferMenuPreferences initialize all preferences stored in localStorage puts selected transfer lists into state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "transferLists": Array [
          "true",
        ],
        "type": "app/AgentTransferMenuPreferenceMenu/TOGGLE_SELECTED_TRANSFER_LISTS_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goInitializeTransferMenuPreferences initialize all preferences stored in localStorage puts the agent preference into state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "agentsTransferMenu": true,
        "type": "app/AgentTransferMenuPreferenceMenu/SET_AGENTS_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goInitializeTransferMenuPreferences initialize all preferences stored in localStorage selects the agent and tenant id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`goInitializeTransferMenuPreferences initialize all preferences stored in localStorage uses the tenant and agent id to get the items from localStorage 1`] = `
Array [
  Array [
    "agentsTransferMenuList-tenantId-agentId",
  ],
  Array [
    "selectedQueues.tenantId.agentId",
  ],
  Array [
    "selectedTransferLists.tenantId.agentId",
  ],
]
`;

exports[`goInitializeTransferMenuPreferences setting AgentPreference to true on state puts all queues into state 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`goInitializeTransferMenuPreferences setting AgentPreference to true on state puts all transfer lists into state 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`goInitializeTransferMenuPreferences setting AgentPreference to true on state puts the agent preference into state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "agentsTransferMenu": false,
        "type": "app/AgentTransferMenuPreferenceMenu/SET_AGENTS_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goInitializeTransferMenuPreferences setting AgentPreference to true on state selects the agent and tenant id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`goInitializeTransferMenuPreferences setting AgentPreference to true on state uses the tenant and agent id to get the items from localStorage 1`] = `
Array [
  Array [
    "agentsTransferMenuList-tenantId-agentId",
  ],
  Array [
    "selectedQueues.tenantId.agentId",
  ],
  Array [
    "selectedTransferLists.tenantId.agentId",
  ],
]
`;

exports[`goInitializeTransferMenuPreferences setting a queue as selected on state puts all transfer lists into state 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`goInitializeTransferMenuPreferences setting a queue as selected on state puts selected queue into state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "queues": Array [
          "123",
        ],
        "type": "app/AgentTransferMenuPreferenceMenu/TOGGLE_SELECTED_QUEUES_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goInitializeTransferMenuPreferences setting a queue as selected on state selects the agent and tenant id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`goInitializeTransferMenuPreferences setting a queue as selected on state sets agent preference to true into state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "agentsTransferMenu": false,
        "type": "app/AgentTransferMenuPreferenceMenu/SET_AGENTS_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goInitializeTransferMenuPreferences setting a queue as selected on state uses the tenant and agent id to get the items from localStorage 1`] = `
Array [
  Array [
    "agentsTransferMenuList-tenantId-agentId",
  ],
  Array [
    "selectedQueues.tenantId.agentId",
  ],
  Array [
    "selectedTransferLists.tenantId.agentId",
  ],
]
`;

exports[`goInitializeTransferMenuPreferences setting a transfer list as selected on state puts all queues into state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "transferLists": Array [
          "abc",
        ],
        "type": "app/AgentTransferMenuPreferenceMenu/TOGGLE_SELECTED_TRANSFER_LISTS_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goInitializeTransferMenuPreferences setting a transfer list as selected on state puts selected transfer list into state 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`goInitializeTransferMenuPreferences setting a transfer list as selected on state selects the agent and tenant id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`goInitializeTransferMenuPreferences setting a transfer list as selected on state sets agent preference to true into state 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "agentsTransferMenu": false,
        "type": "app/AgentTransferMenuPreferenceMenu/SET_AGENTS_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goInitializeTransferMenuPreferences setting a transfer list as selected on state uses the tenant and agent id to get the items from localStorage 1`] = `
Array [
  Array [
    "agentsTransferMenuList-tenantId-agentId",
  ],
  Array [
    "selectedQueues.tenantId.agentId",
  ],
  Array [
    "selectedTransferLists.tenantId.agentId",
  ],
]
`;

exports[`goInitializeTransferMenuPreferences when agentPreference, selectedQueues and selectedTransferLists not saved in localStorage does not set selectedQueues to true by dispatching toggleAllSelectedQueuesTransferMenuPreference action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "queues": Array [
          "false",
        ],
        "type": "app/AgentTransferMenuPreferenceMenu/TOGGLE_SELECTED_QUEUES_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goInitializeTransferMenuPreferences when agentPreference, selectedQueues and selectedTransferLists not saved in localStorage does not set selectedTransferLists to true by dispatching toggleSelectedTransferLists action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "transferLists": Array [
          "false",
        ],
        "type": "app/AgentTransferMenuPreferenceMenu/TOGGLE_SELECTED_TRANSFER_LISTS_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goInitializeTransferMenuPreferences when agentPreference, selectedQueues and selectedTransferLists not saved in localStorage gets localStorage properties that are used to set agentPreference, selectedQueues and selectedTransferLists 1`] = `
Array [
  Array [
    "agentsTransferMenuList-tenantId-agentId",
  ],
  Array [
    "selectedQueues.tenantId.agentId",
  ],
  Array [
    "selectedTransferLists.tenantId.agentId",
  ],
]
`;

exports[`goInitializeTransferMenuPreferences when agentPreference, selectedQueues and selectedTransferLists not saved in localStorage selects tenant and agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`goInitializeTransferMenuPreferences when agentPreference, selectedQueues and selectedTransferLists not saved in localStorage sets agentPreference to true by dispatching setAgentsTransferMenuPreference action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "agentsTransferMenu": false,
        "type": "app/AgentTransferMenuPreferenceMenu/SET_AGENTS_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goToggleAgentsTransferMenuPreference gets agentsTransferMenu preference 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goToggleAgentsTransferMenuPreference selects tenant and agent id 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
      Object {
        "@@redux-saga/IO": true,
        "SELECT": Object {
          "args": Array [],
          "selector": [Function],
        },
      },
    ],
  },
}
`;

exports[`goToggleAgentsTransferMenuPreference toggles agentPreference by dispatching setAgentsTransferMenuPreference action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "agentsTransferMenu": true,
        "type": "app/AgentTransferMenuPreferenceMenu/SET_AGENTS_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goToggleShowQueuesTransferMenuPreference gets showQueuesTransferMenu preference 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goToggleShowQueuesTransferMenuPreference toggles showQueuesTransferMenu by dispatching setShowQueuesTransferMenuPreference action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "showQueues": true,
        "type": "app/AgentTransferMenuPreferenceMenu/SET_SHOW_QUEUES_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;

exports[`goToggleShowTransferListTransferMenuPreference gets showTransferListTransferMenu preference 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "SELECT": Object {
      "args": Array [],
      "selector": [Function],
    },
  },
}
`;

exports[`goToggleShowTransferListTransferMenuPreference toggles goToggleShowTransferListTransferMenuPreference by dispatching setShowTransferListTransferMenuPreference action 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "showTransferLists": true,
        "type": "app/AgentTransferMenuPreferenceMenu/SET_SHOW_TRANSFER_LISTS_TRANSFER_MENU_PREFERENCE",
      },
      "channel": null,
    },
  },
}
`;
